--- a/SourceNetUI/package.json
+++ b/SourceNetUI/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.4.0",
     "ng2-file-upload": "^1.3.0",
     "ngx-smart-modal": "^7.1.1",
+    "ngx-spinner": "^7.1.4",
     "ngx-treeview": "^6.0.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
