--- a/WebApplication1/WebApplication1/SourceFillesAPI.csproj
+++ b/WebApplication1/WebApplication1/SourceFillesAPI.csproj
@@ -79,6 +79,9 @@
       <Private>True</Private>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
+    <Reference Include="SautinSoft.ExcelToPdf, Version=5.1.3.26, Culture=neutral, PublicKeyToken=239046b8a1e8c07b, processorArchitecture=MSIL">
+      <HintPath>..\packages\sautinsoft.exceltopdf.5.1.3.26\lib\net461\SautinSoft.ExcelToPdf.dll</HintPath>
+    </Reference>
     <Reference Include="Spire.Common, Version=2.5.0.6046, Culture=neutral, PublicKeyToken=663f351905198cb3, processorArchitecture=MSIL">
       <HintPath>..\packages\Spire.XLS.9.5.0\lib\net46\Spire.Common.dll</HintPath>
     </Reference>
