--- a/WebApplication1/WebApplication1/packages.config
+++ b/WebApplication1/WebApplication1/packages.config
@@ -33,6 +33,7 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="Office" version="12.0.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
+  <package id="sautinsoft.exceltopdf" version="5.1.3.26" targetFramework="net461" />
   <package id="Spire.XLS" version="9.5.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
