--- a/SourceNetUI/package.json
+++ b/SourceNetUI/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.1.0",
+    "@angular/animations": "^7.2.15",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
@@ -27,6 +27,7 @@
     "ng2-file-upload": "^1.3.0",
     "ngx-smart-modal": "^7.1.1",
     "ngx-spinner": "^7.1.4",
+    "ngx-toastr": "^10.0.4",
     "ngx-treeview": "^6.0.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
