--- a/SourceNetUI/package.json
+++ b/SourceNetUI/package.json
@@ -24,12 +24,14 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "jquery": "^3.4.0",
+    "ng-http-loader": "^5.1.0",
     "ng2-file-upload": "^1.3.0",
     "ngx-smart-modal": "^7.1.1",
     "ngx-spinner": "^7.1.4",
     "ngx-toastr": "^10.0.4",
     "ngx-treeview": "^6.0.2",
     "rxjs": "~6.3.3",
+    "simple-pdf-viewer": "^2.0.3",
     "tslib": "^1.9.0",
     "web-animations-js": "^2.3.1",
     "zone.js": "~0.8.26"
