--- a/SourceNetUI/package.json
+++ b/SourceNetUI/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
-    "@ng-bootstrap/ng-bootstrap": "^4.1.2",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.3",
     "@ng-select/ng-select": "^2.18.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
@@ -32,6 +32,7 @@
     "ngx-treeview": "^6.0.2",
     "rxjs": "~6.3.3",
     "simple-pdf-viewer": "^2.0.3",
+    "sweetalert2": "^8.11.1",
     "tslib": "^1.9.0",
     "web-animations-js": "^2.3.1",
     "zone.js": "~0.8.26"
