--- a/SourceNetUI/package.json
+++ b/SourceNetUI/package.json
@@ -21,11 +21,13 @@
     "@angular/router": "~7.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.1.3",
     "@ng-select/ng-select": "^2.18.0",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "jquery": "^3.4.0",
     "ng-http-loader": "^5.1.0",
     "ng2-file-upload": "^1.3.0",
+    "ngx-bootstrap": "^4.2.0",
+    "ngx-file-drop": "^6.0.1",
     "ngx-smart-modal": "^7.1.1",
     "ngx-spinner": "^7.1.4",
     "ngx-toastr": "^10.0.4",
