--- a/WebApplication1/WebApplication1/bin/WebApplication1.dll.config
+++ b/WebApplication1/WebApplication1/bin/WebApplication1.dll.config
@@ -68,6 +68,18 @@
         <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Spire.Pdf" publicKeyToken="663f351905198cb3" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.8.19046" newVersion="5.2.8.19046" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Spire.License" publicKeyToken="b1144360237c8b3f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.3.7.46" newVersion="1.3.7.46" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Spire.Doc" publicKeyToken="663f351905198cb3" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.1.13.41046" newVersion="7.1.13.41046" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
