--- a/WebApplication1/WebApplication1/packages.config
+++ b/WebApplication1/WebApplication1/packages.config
@@ -3,7 +3,11 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="FreeSpire.Doc" version="7.1.13" targetFramework="net461" />
+  <package id="FreeSpire.Office" version="4.3.1" targetFramework="net461" />
+  <package id="FreeSpire.XLS" version="9.2.1" targetFramework="net461" />
   <package id="GemBox.Document" version="29.0.0.1148" targetFramework="net461" />
+  <package id="iTextSharp" version="5.5.13" targetFramework="net461" />
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net461" />
